syntax = "proto2";

message MessageTypeId {
    required string full_name = 1;
}
